new changes made on pricing and order

--- a/about.html
+++ b/about.html
@@ -155,6 +155,9 @@
                       <li>
                         <a class="pagess" href="service.html">Services</a>
                       </li>
+                      <li>
+                        <a class="pagess" href="pricing.html">PRICING</a>
+                      </li>
 
                       <li><a href="contact.html">contacts</a></li>
                     </ul>
@@ -175,7 +178,11 @@
               <div class="mobile-menu">
                 <div class="logo">
                   <a href="index.html"
-                    ><img src="img/logo/logoImg.jpg" alt=""
+                    ><img
+                      src="img/logo/logoImg.jpg"
+                      alt=""
+                      width="100"
+                      height="100"
                   /></a>
                 </div>
                 <nav id="dropdown">
@@ -183,6 +190,9 @@
                     <li><a class="pagess" href="index.html">Home</a></li>
                     <li><a class="pagess" href="about.html">About us</a></li>
                     <li><a class="pagess" href="service.html">Services</a></li>
+                    <li>
+                      <a class="pagess" href="pricing.html">PRICING</a>
+                    </li>
                     <li><a href="contact.html">contacts</a></li>
                   </ul>
                 </nav>
@@ -664,7 +674,10 @@
                         </a>
                       </li>
                       <li>
-                        <a href="#" target="_blank">
+                        <a
+                          href="https://youtube.com/shorts/wU5ywl91iYk?si=IY2NfmGsVhzHeBZo"
+                          target="_blank"
+                        >
                           <i class="fa fa-youtube"></i>
                         </a>
                       </li>
@@ -695,7 +708,7 @@
                     <div class="suscribe-input">
                       <input
                         type="email"
-                        class="email form-control width-80"
+                        class="email form-control width-100"
                         id="sus_email"
                         placeholder="Type Email"
                       />
