--- a/contact.html
+++ b/contact.html
@@ -153,6 +153,9 @@
                       <li>
                         <a class="pagess" href="service.html">Services</a>
                       </li>
+                      <li>
+                        <a class="pagess" href="pricing.html">PRICING</a>
+                      </li>
 
                       <li><a href="contact.html">contacts</a></li>
                     </ul>
@@ -185,6 +188,9 @@
                     <li><a class="pagess" href="index.html">Home</a></li>
                     <li><a class="pagess" href="about.html">About us</a></li>
                     <li><a class="pagess" href="service.html">Services</a></li>
+                    <li>
+                      <a class="pagess" href="pricing.html">PRICING</a>
+                    </li>
 
                     <li><a href="contact.html">contacts</a></li>
                   </ul>
@@ -516,5 +522,18 @@
     <script src="js/plugins.js"></script>
     <!-- main js -->
     <script src="js/main.js"></script>
+    <script src="js/notify.js"></script>
+
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("<YOUR USER ID>");
+      })();
+    </script>
+
+    <!-- <script src="js/notify.min.js"></script> -->
   </body>
 </html>
