--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
                         <a class="pagess" href="service.html">Services</a>
                       </li>
 
+                      <li>
+                        <a class="pagess" href="pricing.html">PRICING</a>
+                      </li>
+
                       <li><a href="contact.html">contacts</a></li>
                     </ul>
                   </div>
@@ -187,6 +191,9 @@
                     <li><a class="pagess" href="index.html">Home</a></li>
                     <li><a class="pagess" href="about.html">About us</a></li>
                     <li><a class="pagess" href="service.html">Services</a></li>
+                    <li>
+                      <a class="pagess" href="pricing.html">PRICING</a>
+                    </li>
                     <li><a href="contact.html">contacts</a></li>
                   </ul>
                 </nav>
@@ -197,6 +204,7 @@
       </div>
       <!-- mobile-menu-area end -->
     </header>
+
     <!-- header end -->
     <!-- Start Slider Area -->
     <div class="intro-area intro-area-2">
@@ -222,7 +230,7 @@
                       <!-- layer 2 -->
                       <div class="layer-2">
                         <p>
-                          A Cleaning company services that provides professional
+                          A Cleaning company that provides professional
                           services.
                         </p>
                       </div>
@@ -262,7 +270,7 @@
                       <!-- layer 2 -->
                       <div class="layer-2">
                         <p>
-                          A Cleaning company services that provides professional
+                          A Cleaning company that provides professional
                           services.
                         </p>
                       </div>
@@ -479,8 +487,8 @@
             <div class="section-headline text-center">
               <h3>Our Services</h3>
               <p>
-                The world's Latest at clean cleaning service company we can
-                clean your residential space including homes.
+                The world's Latest at clean cleaning service's, we can clean
+                your residential space including homes.
               </p>
             </div>
           </div>
@@ -612,7 +620,7 @@
                 <div class="top-price-inner">
                   <h4>Standard</h4>
                   <div class="rates">
-                    <span class="prices"><span class="dolar">$</span>15</span
+                    <span class="prices"><span class="dolar">£</span>15</span
                     ><span class="users">Per Hour</span>
                   </div>
                 </div>
@@ -635,7 +643,7 @@
                 <div class="top-price-inner">
                   <h4>Premium</h4>
                   <div class="rates">
-                    <span class="prices"><span class="dolar">$</span>80</span
+                    <span class="prices"><span class="dolar">£</span>80</span
                     ><span class="users">Per day</span>
                   </div>
                 </div>
@@ -657,7 +665,7 @@
                 <div class="top-price-inner">
                   <h4>Ultimate</h4>
                   <div class="rates">
-                    <span class="prices"><span class="dolar">$</span>600</span
+                    <span class="prices"><span class="dolar">£</span>600</span
                     ><span class="users">Per Month</span>
                   </div>
                 </div>
