--- a/pricing.html
+++ b/pricing.html
@@ -226,11 +226,11 @@
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="breadcrumb">
               <div class="section-headline white-headline text-center">
-                <h3>BOOK US NOW</h3>
+                <h3>OUR PRICES</h3>
               </div>
               <ul>
                 <li class="home-bread">Home</li>
-                <li>Book now</li>
+                <li>Pricing</li>
               </ul>
             </div>
           </div>
@@ -239,197 +239,172 @@
     </div>
     <!-- END Header -->
 
-    <div class="order-area area-padding">
+    <section class="section our-price pt-5">
       <div class="container">
+        <h2 class="text-center">OUR PRICES</h2>
+
+        <p class="text-center">
+          Cleaners are paid directly from just &pound;11.50 per hour, this
+          varies just slightly depending on the area you live in. All of the
+          other tasks you require including ironing are charged at the exact
+          same hourly rate.
+        </p>
+
+        <p class="text-center">
+          Bolfis cleaning and decorating has a flexible fee structure. You can
+          choose a wide range of options to best suit your needs, from a one day
+          cleaning option to a one year contract.
+        </p>
+
         <div class="row">
-          <div class="col-md-offset-2 col-md-8 col-sm-12">
-            <div class="section-headline text-center">
-              <h3>BOOK US NOW</h3>
-              <p>We are thrilled to happily work with you.</p>
-            </div>
-            <!-- Start Order From -->
-            <div class="order-form">
-              <div class="row">
-                <form id="contactForm" class="contact-form">
-                  <!-- single feilds -->
-                  <div class="sign-feilds">
-                    <div class="input-text">
-                      <input
-                        type="text"
-                        id="name"
-                        class="form-control width-50"
-                        placeholder="Your Name"
-                        required
-                        data-error="Please enter your name"
-                      />
-                      <input
-                        type="text"
-                        class="form-control width-50 last-name"
-                        id="address"
-                        placeholder="Address"
-                        required
-                        data-error="Please enter your address"
-                      />
-                      <div class="help-block with-errors"></div>
-                    </div>
+          <div class="col-md-7 text-center">
+            <div class="price-tag-area">
+              <div class="price-tag">
+                <div class="price-name">ONE OFF</div>
+                <div class="price-value">
+                  <!-- <div class="from-note">From</div> -->
+                  <div class="value">&pound;30</div>
+                  <div class="vat-note">+ VAT</div>
+                </div>
+              </div>
+              <div class="price-tag">
+                <div class="price-name">ONE MONTH</div>
+                <div class="price-value">
+                  <div class="value">&pound;59</div>
+                  <div class="vat-note">+ VAT</div>
+                </div>
+              </div>
+              <div class="price-tag">
+                <div class="price-name">TWO MONTHS</div>
+                <div class="price-value">
+                  <div class="value">&pound;69</div>
+                  <div class="vat-note">+ VAT</div>
+                </div>
+              </div>
+              <div class="price-tag">
+                <div class="price-name">THREE MONTHS</div>
+                <div class="price-value">
+                  <div class="value">&pound;79</div>
+                  <div class="vat-note">+ VAT</div>
+                </div>
+              </div>
+              <div class="price-tag">
+                <div class="price-name">SIX MONTHS</div>
+                <div class="price-value">
+                  <div class="value">&pound;119</div>
+                  <div class="vat-note">+ VAT</div>
+                </div>
+              </div>
+              <div class="price-tag">
+                <div class="price-name with-note">
+                  YEARLY
+                  <div class="price-note">
+                    <span>&pound;156</span>
+                    +VAT
+                    <br />
+                    IN 2ND YEAR
                   </div>
-                  <!-- single feilds -->
-                  <div class="sign-feilds">
-                    <div class="input-text">
-                      <input
-                        type="email"
-                        class="email form-control width-50"
-                        id="email"
-                        placeholder="Email"
-                        required
-                        data-error="Please enter your email"
-                      />
-                      <input
-                        type="text"
-                        class="address form-control width-50 last-name"
-                        id="phone"
-                        placeholder="Phone Number"
-                        required
-                        data-error="Please enter your address"
-                      />
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-                  <!-- single feilds -->
-                  <div class="sign-feilds">
-                    <div class="input-text">
-                      <select
-                        id="sel"
-                        class="form-control width-50"
-                        name="select-services"
-                      >
-                        <option value="0">select-services</option>
-                        <option value="Residential Cleaning">
-                          Residential Cleaning
-                        </option>
-                        <option value="Commercial">Commercial Cleaning</option>
-                        <option value="Maid">Maid Services</option>
-                        <option value="House">House Cleaning</option>
-                        <option value="Carpet">Carpet Cleaning</option>
-                        <option value="Move">Move Out Cleaning</option>
-                        <option value="Office">Office Cleaning</option>
-                        <option value="Floor">Floor Scrubbing</option>
-                        <option value="MoveIn">Move In Cleaning</option>
-                        <option value="Ironing">Ironing Service</option>
-                        <option value="Declutter & Organize">
-                          Declutter & Organize
-                        </option>
-                      </select>
-                      <select
-                        id="sele"
-                        class="form-control width-50 last-name"
-                        name="select-member"
-                      >
-                        <option value="0">
-                          How many professionals do you need?
-                        </option>
-                        <option value="1">1 Person</option>
-                        <option value="2">2 Person</option>
-                        <option value="3">3 Person</option>
-                        <option value="4">4 Person</option>
-                        <option value="5">5 Person</option>
-                        <option value="6">6 Person</option>
-                        <option value="7">7 Person</option>
-                        <option value="8">8 Person</option>
-                        <option value="9">9 Person</option>
-                        <option value="10">10 Person</option>
-                      </select>
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-
-                  <div class="sign-feilds">
-                    <div class="input-text">
-                      <select
-                        id="mat"
-                        class="form-control width-50"
-                        name="material"
-                      >
-                        <option value="0">Cleaning materials</option>
-                        <option value="yes">Yes I have</option>
-                        <option value="No">No I dont</option>
-                      </select>
-                      <select
-                        id="hour"
-                        class="form-control width-50 last-name"
-                        name="select-hour"
-                      >
-                        <option value="0">
-                          How many hours do you need our workers to stay?
-                        </option>
-                        <option value="1">2</option>
-                        <option value="2">3</option>
-                        <option value="3">4</option>
-                        <option value="4">5</option>
-                        <option value="5">6</option>
-                        <option value="6">7</option>
-                        <option value="7">8</option>
-                      </select>
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-
-                  <!-- single feilds -->
-                  <div class="sign-feilds">
-                    <div class="form-group form-control time-zone width-50">
-                      <p class="from-slogan">Select date to start work</p>
-                      <div class="input-group date" id="datetimepicker1">
-                        <input type="text" class="form-control" />
-                        <span class="input-group-addon">
-                          <i class="fa fa-calendar"></i>
-                        </span>
-                      </div>
-                    </div>
-                    <div
-                      class="form-group form-control time-zone width-50 last-name"
-                    >
-                      <p class="from-slogan">Select time to start work</p>
-                      <div class="input-group time" id="datetimepicker3">
-                        <input type="text" class="form-control" />
-                        <span class="input-group-addon">
-                          <i class="fa fa-clock-o"></i>
-                        </span>
-                      </div>
-                    </div>
-                    <div class="help-block with-errors"></div>
-                  </div>
-                  <div class="form-group">
-                    <textarea
-                      id="message"
-                      rows="7"
-                      placeholder="Message"
-                      class="form-control"
-                      required
-                      data-error="Write your message"
-                    ></textarea>
-                    <div class="help-block with-errors"></div>
-                  </div>
-                  <!-- single feilds -->
-                  <div class="sign-feilds">
-                    <div class="submit-btn">
-                      <button
-                        type="submit"
-                        id="submit_mg"
-                        class="add-btn contact-btn"
-                      >
-                        Book Now
-                      </button>
-                      <div id="msg_Submit" class="h3 text-center hidden"></div>
-                    </div>
-                  </div>
-                </form>
+                </div>
+                <div class="price-value">
+                  <div class="value">&pound;209</div>
+                  <div class="vat-note">+ VAT</div>
+                </div>
+              </div>
+              <div class="price-tag-long">
+                <div class="price-name mb-2">SHORT-LET CLEANING</div>
+                <div class="price-name secondary">
+                  PLEASE CONTACT US TO DISCUSS YOUR REQUIREMENTS
+                </div>
               </div>
             </div>
-            <!-- End Order Form -->
+            <p class="text-left">
+              If you require 6 or more hours of cleaning per week then please
+              contact us to discuss prices. All prices are plus VAT
+            </p>
+          </div>
+          <div class="col-md-5">
+            <div class="card quotation">
+              <div class="title">GET A QUOTE</div>
+              <p>How often do you require a cleaner?</p>
+              <div class="mb-4">
+                <button
+                  class="btn clean-frequency-btn active"
+                  value="weekly"
+                  data-frequency="1"
+                >
+                  WEEKLY
+                </button>
+                <button
+                  class="btn clean-frequency-btn"
+                  value="fortnightly"
+                  data-frequency=".5"
+                >
+                  FORTNIGHTLY
+                </button>
+                <button
+                  class="btn clean-frequency-btn"
+                  value="one-time"
+                  data-frequency="1"
+                >
+                  ONE TIME
+                </button>
+                <input id="frequency-input" type="hidden" value="weekly" />
+                <input id="frequency-multiplier" type="hidden" value="1" />
+              </div>
+
+              <p>Which service length do you require?</p>
+              <div class="slidecontainer service-lenght">
+                <input
+                  class="slider"
+                  type="range"
+                  min="1"
+                  max="3"
+                  value="3"
+                  id="service-lenght"
+                />
+              </div>
+
+              <p>How many hours are needed per visit?</p>
+              <div class="slidecontainer service-hours">
+                <input
+                  class="slider"
+                  type="range"
+                  min="2"
+                  max="10"
+                  value="5"
+                  class="slider"
+                  id="service-hours"
+                />
+              </div>
+
+              <div class="hourly-rate">
+                FROM <span class="per-hour-quotation"></span> PER HOUR
+              </div>
+
+              <input
+                type="hidden"
+                id="cleaner-hourly-rate"
+                value="&amp;pound;11.50"
+              />
+
+              <input type="hidden" id="one_off_rate" value="&amp;pound;30" />
+              <input
+                type="hidden"
+                id="three_months_rate"
+                value="&amp;pound;79"
+              />
+              <input
+                type="hidden"
+                id="six_months_rate"
+                value="&amp;pound;119"
+              />
+              <input type="hidden" id="yearly_rate" value="&amp;pound;209" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
+
     <!-- Start Banner Area -->
     <div class="banner-area">
       <div class="container">
@@ -616,22 +591,6 @@
     <!-- main js -->
     <script src="js/main.js"></script>
     <script src="js/notify.js"></script>
-    <script type="text/javascript">
-      $(function () {
-        $("#datetimepicker1").datetimepicker();
-
-        $("#datetimepicker3").datetimepicker({
-          format: "LT",
-        });
-      });
-    </script>
-
-    <drutek-cookie-banner
-      banner-title="Cookies"
-      banner-text="We use cookies to help personalise content, tailor and measure ads, and provide a safer experience. By navigating the site, you agree to the use of cookies to collect information on and off Homeclean."
-      privacy-policy-link="/uk/privacy_statement.html"
-      privacy-policy-link-text="Please see our privacy statement for more details"
-    ></drutek-cookie-banner>
-    <script src="https://unpkg.com/drutek-web-components@0.6.0/dist/drutek-web-components.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
