done with book now email sending

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Home | Clean home</title>
+    <title>Home | Bolfis Cleaning and Decorating</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/logo/ico.jpg" />
 
     <!-- all css here -->
 
@@ -84,7 +84,9 @@
                     ></a>
                   </li>
                   <li>
-                    <a href="#" target="_blank"
+                    <a
+                      href="https://youtube.com/shorts/wU5ywl91iYk?si=IY2NfmGsVhzHeBZo"
+                      target="_blank"
                       ><i class="fa fa-youtube"></i
                     ></a>
                   </li>
@@ -195,6 +197,7 @@
                       <a class="pagess" href="pricing.html">PRICING</a>
                     </li>
                     <li><a href="contact.html">contacts</a></li>
+                    <li><a href="order-from.html">Book Now</a></li>
                   </ul>
                 </nav>
               </div>
@@ -313,7 +316,7 @@
                 <div class="service-content">
                   <h4>Residential cleaning</h4>
                   <p>
-                    At Bolfis cleaning & Decorating, we understand the
+                    At Bolfis Cleaning & Decorating, we understand the
                     importance of a clean and comfortable living space. Our
                     professional residential cleaning services ensure your home
                     shines from top to bottom.
@@ -1299,5 +1302,13 @@
     <script src="js/plugins.js"></script>
     <!-- main js -->
     <script src="js/main.js"></script>
+
+    <drutek-cookie-banner
+      banner-title="Cookies"
+      banner-text="We use cookies to help personalise content, tailor and measure ads, and provide a safer experience. By navigating the site, you agree to the use of cookies to collect information on and off Homeclean."
+      privacy-policy-link="/uk/privacy_statement.html"
+      privacy-policy-link-text="Please see our privacy statement for more details"
+    ></drutek-cookie-banner>
+    <script src="https://unpkg.com/drutek-web-components@0.6.0/dist/drutek-web-components.js"></script>
   </body>
 </html>
