--- a/pricing.html
+++ b/pricing.html
@@ -93,7 +93,10 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#" target="_blank">
+                    <a
+                      href="https://youtube.com/shorts/wU5ywl91iYk?si=IY2NfmGsVhzHeBZo"
+                      target="_blank"
+                    >
                       <i class="fa fa-youtube"></i>
                     </a>
                   </li>
