--- a/service.html
+++ b/service.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Services | Clean Home</title>
+    <title>Services | Bolfis Cleaning and Decorating</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/logo/ico.jpg" />
 
     <!-- all css here -->
 
@@ -78,8 +78,13 @@
                 <ul>
                   <li>
                     <a
-                      href="https://www.instagram.com/bolfis.london?igsh=N2poMmx2czg1cDc2"
-                      ><i class="fa fa-instagram"></i
+                      href="https://www.facebook.com/share/xXKFxKGUJmc8pKwy/?mibextid=LQQJ4d"
+                      ><i class="fa fa-facebook"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="https://x.com/BolfisD32384"
+                      ><i class="fa fa-twitter"></i
                     ></a>
                   </li>
                   <li>
@@ -89,17 +94,9 @@
                     ></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa fa-google"></i></a>
-                  </li>
-                  <li>
-                    <a href="https://x.com/BolfisD32384"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
-                  </li>
-                  <li>
                     <a
-                      href="https://www.facebook.com/share/xXKFxKGUJmc8pKwy/?mibextid=LQQJ4d"
-                      ><i class="fa fa-facebook"></i
+                      href="https://www.instagram.com/bolfis.london?igsh=N2poMmx2czg1cDc2"
+                      ><i class="fa fa-instagram"></i
                     ></a>
                   </li>
                 </ul>
@@ -200,6 +197,7 @@
                     </li>
 
                     <li><a href="contact.html">contacts</a></li>
+                    <li><a href="order-from.html">Book Now</a></li>
                   </ul>
                 </nav>
               </div>
