--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>About us | Clean Home</title>
+    <title>About us | Bolfis Cleaning and Decorating</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/logo/ico.jpg" />
 
     <!-- all css here -->
 
@@ -194,6 +194,7 @@
                       <a class="pagess" href="pricing.html">PRICING</a>
                     </li>
                     <li><a href="contact.html">contacts</a></li>
+                    <li><a href="order-from.html">Book Now</a></li>
                   </ul>
                 </nav>
               </div>
