--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Contact us | Clean Home</title>
+    <title>Contact us | Bolfis Cleaning and Decorating</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/logo/ico.jpg" />
 
     <!-- all css here -->
 
@@ -193,6 +193,7 @@
                     </li>
 
                     <li><a href="contact.html">contacts</a></li>
+                    <li><a href="order-from.html">Book Now</a></li>
                   </ul>
                 </nav>
               </div>
@@ -291,7 +292,7 @@
                     <input
                       type="email"
                       class="email form-control"
-                      id="eemail"
+                      id="email"
                       placeholder="Email"
                       required
                       data-error="Please enter your email"
@@ -521,18 +522,15 @@
     <!-- plugins js -->
     <script src="js/plugins.js"></script>
     <!-- main js -->
-    <script src="js/main.js"></script>
-    <script src="js/notify.js"></script>
-
+    <!-- <script src="https://cdn.emailjs.com/dist/email.min.js"></script> -->
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
     ></script>
-    <script type="text/javascript">
-      (function () {
-        emailjs.init("<YOUR USER ID>");
-      })();
-    </script>
+
+    <!-- <script src="js/email.js"></script> -->
+    <script src="js/main.js"></script>
+    <script src="js/notify.js"></script>
 
     <!-- <script src="js/notify.min.js"></script> -->
   </body>
