done with book now email sending

--- a/congratulation.html
+++ b/congratulation.html
@@ -8,5 +8,12 @@
 
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container congrat-main">
+      <div class="congrat-cont">
+        <img src="img/background/comfirm.png" alt="/" />
+        <h3>Message Sent Successfully</h3>
+      </div>
+    </div>
+  </body>
 </html>
