--- a/contact.html
+++ b/contact.html
@@ -522,6 +522,9 @@
     <!-- plugins js -->
     <script src="js/plugins.js"></script>
     <!-- main js -->
+    <!-- sweetalert2 js -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <!-- <script src="https://cdn.emailjs.com/dist/email.min.js"></script> -->
     <script
       type="text/javascript"
