--- a/order-from.html
+++ b/order-from.html
@@ -618,6 +618,7 @@
     <!-- main js -->
     <script src="js/notify.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- <script src="https://cdn.emailjs.com/dist/email.min.js"></script> -->
     <script
       type="text/javascript"
